# projects_C.

./: README.md
A2_SimpleNavigator_v1.0.ID_Team/: .gitignore
A2_SimpleNavigator_v1.0.ID_Team/materials/: instructions_for_testing_rus.md
A2_SimpleNavigator_v1.0.ID_Team/src/: Makefile  README.md
A2_SimpleNavigator_v1.0.ID_Team/src/algorithm/: Makefile  breadth_first_search.c  depth_first_search.c  get_least_spanning_tree.c  get_shortest_path_between_vertices.c  get_shortest_paths_between_all_vertices.c  graph_algorithms.h  solve_traveling_salesman_problem.c  tsp_held_karp.c  tsp_nearest_neighbor.c  utils.c  utils.h
A2_SimpleNavigator_v1.0.ID_Team/src/cli/: Makefile  cli.h  file_processing.c  handle_compare_tsp.c  handlers.c  main.c  utils.c
A2_SimpleNavigator_v1.0.ID_Team/src/data/: directed.dot  directed.txt  extra_large_23.txt  graph_4.txt  opposite_ways.txt  ring4.txt  undirected.dot  undirected.txt
A2_SimpleNavigator_v1.0.ID_Team/src/graph/: Makefile  graph.c  graph.h  test.c
A2_SimpleNavigator_v1.0.ID_Team/src/queue/: Makefile  queue.c  queue.h  test.c
A2_SimpleNavigator_v1.0.ID_Team/src/stack/: Makefile  stack.c  stack.h  test.c
C2_s21_stringplus-1/src/: Makefile  lib_save_a.txt  s21_functions_c_sharp.c  s21_sprintf.c  s21_sscanf.c  s21_strerror.c  s21_string.c  s21_string.h  test.c  unit_test_lib_check.txt
C5_s21_decimal-1/src/: Makefile  my_readmy_common.md  s21_decimal.h
C5_s21_decimal-1/src/arithmetic/: s21_add.c  s21_div.c  s21_mul.c  s21_sub.c
C5_s21_decimal-1/src/common/: s21_common.c  s21_common.h
C5_s21_decimal-1/src/comparison/: s21_is_equal.c  s21_is_greater.c  s21_is_less.c  s21_is_not_equal.c
C5_s21_decimal-1/src/conversion/: s21_from_decimal_to_float.c  s21_from_decimal_to_int.c  s21_from_float_to_decimal.c  s21_from_int_to_decimal.c
C5_s21_decimal-1/src/other/: s21_floor.c  s21_negate.c  s21_round.c  s21_truncate.c
C5_s21_decimal-1/src/tests/: test_from_float_to_decimal.c  test_sub.c
C6_s21_matrix-1/src/: Makefile  s21_matrix.h
C6_s21_matrix-1/src/arithmetic/: s21_mult_matrix.c  s21_mult_number.c  s21_sub_matrix.c  s21_sum_matrix.c
C6_s21_matrix-1/src/comparison/: s21_eq_matrix.c
C6_s21_matrix-1/src/conversion/: s21_inverse_matrix.c  s21_transpose.c
C6_s21_matrix-1/src/tests/: test_matrix.c  (+11 more)
C7_BrickGame_v1.0-1/src/: Makefile  brick_game.c  brick_game.h  set_install_path.sh
CPP3_BrickGame_v2.0-1/: README.md  README_RUS.md
CPP3_BrickGame_v2.0-1/src/: CMakeLists.txt  Makefile  brick_game.c  launcher.cpp  main.cpp  set_install_path.sh  snake.cpp
CPP3_BrickGame_v2.0-1/src/brick_game/snake/: CMakeLists.txt  snake_controller.cpp  snake_controller.hpp  snake_game.cpp  snake_game.hpp
CPP3_BrickGame_v2.0-1/src/brick_game/tetris/: CMakeLists.txt  backend_tetris.c  backend_tetris.h  tetris_controller.cpp  tetris_controller.hpp
CPP3_BrickGame_v2.0-1/src/docs/: Doxyfile
CPP3_BrickGame_v2.0-1/src/gui/cli/: frontend.c  frontend.h  snake_console_view.cpp  snake_console_view.hpp
CPP3_BrickGame_v2.0-1/src/gui/desktop/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  snakewidget.cpp  snakewidget.h  tetriswidget.cpp  tetriswidget.hpp
CPP3_BrickGame_v2.0-1/src/unit_test/: snake_game_test.cpp  unit_test.c  unit_test.h
(+19 files in other folders)
